[package]
name = "binary-merkle-tree"
version = "0.1.0"
edition = "2021"

[[example]]
name = "keyed_tree"
required-features = ["executable"]

[[example]]
name = "index_tree"
required-features = ["executable"]

[[example]]
name = "recorder"
required-features = ["executable"]

[dependencies]
hash-db = { version = "0.15.2", default-features = false }
hash256-std-hasher = { version = "0.15.2", optional = true, default-features = false }
hashbrown = { version = "0.13.2", default-features = false, features = ["ahash"] }
memory-db = { version = "0.29.0", optional = true, default-features = false }
sha3 = { version = "0.10", optional = true }

[dev-dependencies]
rs_merkle = "1.2.0"
sha2 = { version = "0.10", default-features = false }
hash256-std-hasher = { version = "0.15.2", default-features = false }
memory-db = { version = "0.29.0", default-features = false }
sha3 = { version = "0.10"}

[features]
default = ["std"]
std = [
    "hash-db/std",
    "memory-db/std"
]
executable = [
    "hash256-std-hasher",
    "memory-db",
    "sha3"
]